fix: align header structure with list row
In order to avoid inconsistencies in the layout.

--- a/frappe/public/scss/desk/list.scss
+++ b/frappe/public/scss/desk/list.scss
@@ -160,11 +160,11 @@
 	.file-select {
 		padding-left: 11px;
 	}
+}
 
-	.select-like {
-		padding: var(--list-checkbox-padding);
-		cursor: default;
-	}
+.select-like {
+	padding: var(--list-checkbox-padding);
+	cursor: default;
 }
 
 .list-row-head {
@@ -172,12 +172,9 @@
 	cursor: default;
 	background-color: var(--subtle-fg);
 	height: 30px;
-	margin: 0.5rem var(--padding-xs);
+	margin: 0.5rem 0;
 	border-radius: var(--border-radius-md);
 
-	.list-check-all {
-		margin-left: 11px;
-	}
 	.list-subject {
 		font-weight: normal;
 	}
@@ -252,18 +249,11 @@ $level-margin-right: 8px;
 	margin-bottom: 1px;
 }
 
-input.list-row-checkbox {
+input.list-row-checkbox,
+input.list-header-checkbox {
 	margin-top: 0;
 	margin-bottom: 0;
 	--checkbox-right-margin: 0;
-	background-color: var(--card-bg);
-}
-
-input.list-check-all {
-	margin-left: 15px;
-	margin-top: 0;
-	margin-bottom: 0;
-	--checkbox-right-margin: var(--list-checkbox-padding);
 	background-color: var(--card-bg);
 }
 
